--- a/src/main/resources/templates/secure.html
+++ b/src/main/resources/templates/secure.html
@@ -38,7 +38,9 @@
             <p th:inline="text"><strong>Password: </strong>[[${user.password}]]</p>
             </div>
 
-            <br><br><br><br><br><br>
+            <br><br><br>
+            <a th:href="@{/orderHistory}"><button type="button" class="btn btn-small btn-primary" >Past Orders</button></a>
+            <br><br><br>
 
         </div>
         <div class="col-4" ></div>
