--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -54,7 +54,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);}
 
 
 .bg-faded{
