--- a/src/main/resources/templates/creditform.html
+++ b/src/main/resources/templates/creditform.html
@@ -112,7 +112,7 @@
 <div class="row">
     <div class="col-75">
         <div class="container" id="creditcard">
-            <form action="/finalConfirm">
+            <form action="/finalConfirm" th:object="${user}">
 
                 <div class="row">
                     <div class="col-50">
@@ -120,7 +120,8 @@
                         <label for="fname"><i class="fa fa-user"></i> Full Name</label>
                         <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
                         <label for="email"><i class="fa fa-envelope"></i> Email</label>
-                        <input type="text" id="email" name="email" placeholder="john@example.com" required>
+                        <input type="text" id="email" name="email" placeholder="john@example.com" th:field="*{email}" required>
+
                         <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
                         <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
                         <label for="city"><i class="fa fa-institution"></i> City</label>
