--- a/src/main/resources/templates/creditform.html
+++ b/src/main/resources/templates/creditform.html
@@ -107,6 +107,7 @@
 <body>
 <!--Navigation Bar-->
 <div th:replace="base :: navbar"></div>
+<div th:replace="base :: categorybar"></div>
 <br>
 <br>
 <div class="row">
