--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -75,7 +75,7 @@
             <div class="<!--collapse--> navbar-collapse" id="categoryBarResponsive">
                 <ul class="navbar-nav ml-auto">
 
-                    <li class="breadcrumb-item active">
+                    <li class="breadcrumb-item">
                         <a class="nav-link" href="/"> All </a>&emsp;
                     </li>
 
