--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -18,49 +18,55 @@
 <br>
 <br>
 
-
-
+<!--Header-->
 <div class="container">
-    <!--Header-->
     <h1 class="mt-4 mb-3">Showroom <small style="color: white" th:inline="text">[[${category.name}]]s</small></h1>
 </div>
 
+
+<!--List of Products in Selected Category-->
 <div class="container bg-faded text-white">
 
-    <!-- Project One -->
-    <div th:each="product : ${category.products}">
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-fluid rounded mb-3 mb-md-0" th:src="${product.image}" alt="CLOUDINARRRYYYYYYYYYY">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h1 th:inline="text">[[${product.name}]]</h1>
-                <div th:inline="text">Description: [[${product.description}]]</div>
-                <div th:inline="text">Category: [[${product.category.name}]]</div>
-                <div th:inline="text">Price: [[${product.price}]]</div>
-                <div th:inline="text">Added by: [[${product.user.username}]]</div>
+    <div class="row">
+        <hr class="mt-2 mb-5">
+        <div class="row text-center text-lg-left">
 
-                <br>
+            <!-- List of Products -->
+            <div class="card-deck">
+                <div th:each="product : ${category.products}" class="col-lg-3 col-md-4 col-6">
 
-                <a th:href="@{/detail/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-primary" >Details</button></a>
-                <br><br>
-                <div th:if="${product.user.getId()} == ${product_user_id}">
-                    <a th:href="@{/update/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-warning" >Update</button></a>
-                    <a th:href="@{/delete/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-danger" >Delete</button></a>
+                    <div class="card" style="width: 18rem; height: 100%; color: black">
+                        <img class="card-img-top" th:src="${product.image}" alt="">
+                        <div class="card-img-top">
+                            <!--<p th:inline="text"><strong>[[${product.name}]]</strong></p>-->
+                        </div>
+                        <div class="card-body" style="color: black">
+                            <p th:inline="text"><strong>[[${product.name}]]</strong></p>
+                            <p th:inline="text" style="font-style: italic">[[${product.category.name}]]</p>
+                            <hr class="text-muted">
+                            <p th:inline="text"><strong style="color: brown">[[${product.price}]]</strong></p>
+                            <p th:inline="text">[[${product.description}]]</p>
+                        </div>
+                        <div class="card-footer">
+                            <a th:href="@{/detail/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-primary stretched-link" >Details</button></a>
+                            <a th:href="@{/addToCart/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-success" >Add to Cart</button></a>
+                            <br><br>
+                            <div th:if="${product.user.getId()} == ${product_user_id}">
+                                <a th:href="@{/update/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-warning" >Update</button></a>
+                                <a th:href="@{/delete/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-danger" >Delete</button></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
             </div>
 
         </div>
-
-        <br>
-        <hr>
-        <br>
-
     </div>
+
 </div>
+
+
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
