--- a/src/main/resources/templates/searchlist.html
+++ b/src/main/resources/templates/searchlist.html
@@ -23,50 +23,57 @@
     <h1 class="mt-4 mb-3">Showroom <small style="color: white">Current Inventory</small></h1>
 </div>
 
+<!--Card Deck of All Products-->
 <div class="container bg-faded text-white">
 
-    <!-- List of Products in Search Results -->
-    <div th:each="product: ${productSearch}">
+    <div class="row">
+        <hr class="mt-2 mb-5">
+        <div class="row text-center text-lg-left">
 
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <div th:if="${product.image} != null">
-                        <img class="img-fluid rounded mb-3 mb-md-0" style="height: 200px" th:src="${product.image}" alt="NO IMAGE">
+            <!-- List of Products -->
+            <div class="card-deck">
+                <div th:each="product : ${productSearch}" class="col-lg-3 col-md-4 col-6">
+
+                    <div class="card" style="width: 18rem; height: 100%; color: black">
+                        <img class="card-img-top" th:src="${product.image}" alt="">
+                        <div class="card-img-top">
+                            <!--<p th:inline="text"><strong>[[${product.name}]]</strong></p>-->
+                        </div>
+                        <div class="card-body" style="color: black">
+                            <p th:inline="text"><strong>[[${product.name}]]</strong></p>
+                            <p th:inline="text" style="font-style: italic">[[${product.category.name}]]</p>
+                            <hr class="text-muted">
+                            <p th:inline="text"><strong style="color: brown">[[${product.price}]]</strong></p>
+                            <p th:inline="text">[[${product.description}]]</p>
+                        </div>
+                        <div class="card-footer">
+                            <a th:href="@{/detail/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-primary stretched-link" >Details</button></a>
+                            <a th:href="@{/addToCart/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-success" >Add to Cart</button></a>
+                            <br><br>
+                            <div th:if="${product.user.getId()} == ${product_user_id}">
+                                <a th:href="@{/update/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-warning" >Update</button></a>
+                                <a th:href="@{/delete/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-danger" >Delete</button></a>
+                            </div>
+                        </div>
                     </div>
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h1 th:inline="text">[[${product.name}]]</h1>
-                <div th:inline="text">Description: [[${product.description}]]</div>
-                <div th:inline="text">Category: [[${product.category.name}]]</div>
-                <div th:inline="text">Price: [[${product.price}]]</div>
-                <div th:inline="text">Added by: [[${product.user.username}]]</div>
-
-                <br>
-
-                <a th:href="@{/detail/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-primary" >Details</button></a>
-                <!--                <a th:href="@{/addToCart/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-primary" >Add to Cart</button></a>-->
-                <a th:href="@{/addToCart/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-primary" >Add to Cart</button></a>
-                <br><br>
-                <div th:if="${product.user.getId()} == ${product_user_id}">
-                    <a th:href="@{/update/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-warning" >Update</button></a>
-                    <a th:href="@{/delete/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-danger" >Delete</button></a>
-
-
-
                 </div>
-
             </div>
 
         </div>
-
-        <br>
-        <hr>
-        <br>
-
     </div>
+
 </div>
+
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
