--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -17,6 +17,10 @@
 <!-- Navigation -->
 <div class="navigation" th:fragment="navbar">
 
+    <div class="container" style="text-align: center">
+        <img src="/images/logo/samazoncoffee_inverse.png" alt="Samazon Coffee Logo" style="width: 100%">
+    </div>
+
     <nav class="navbar navbar-expand-lg navbar-dark <!--fixed-top-->" id="mainNav" >
         <div class="container"><!-- style="font-family: 'Spectral SC', serif;">-->
             <a class="navbar-brand" href="/"> <!--style="font-family: 'Julius Sans One', sans-serif;">--><img src="https://res.cloudinary.com/dwsdggfi5/image/upload/c_scale,h_40/v1583438126/Images/Avatar/appa_logo_j9dof2.png" style="opacity: 1"> Hotline Coffee </a>
@@ -51,7 +55,7 @@
                     <!--                    </li>-->
 
                     <li class="nav-item" th:if="${user_id} != null">
-                        <a class="nav-link" th:href="@{/cart/{user_id}(user_id=${user_id})}"> **CART** </a>
+                        <a class="nav-link" th:href="@{/cart/{user_id}(user_id=${user_id})}"> <button type="button" class="btn btn-primary">Cart</button> </a>
                     </li>
 
                 </ul>
