--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -19,62 +19,58 @@
 <br>
 <br>
 
-<h1>Confirm</h1>
-
-<!--List Products in Cart-->
-<div th:each="cart : ${carts}">
-    <table class="table table-dark table-hover table-striped">
-        <thead>
-        <tr style="font-family: 'Spectral SC', serif;">
-            <td></td>
-            <td>Product</td>
-            <td>Description</td>
-            <td>Product Price</td>
-            <td>Cart Price</td>
-            <td>Total Price w/Shipping</td>
-        </tr>
-        </thead>
-
-        <tbody>
-        <tr th:each="product : ${cart.productsInCart}">
-            <td><img th:src="${product.image}" class="img-thumbnail"></td>
-            <td th:inline="text"><strong>[[${product.name}]]</strong></td>
-            <td th:text="${product.description}"></td>
-            <td th:text="${product.price}"></td>
-
-        </tr>
-
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
 
 
+<!--Confirm Cart Contents-->
+<div class="container">
 
-            <td th:inline="text"><strong>Total<br>[[${cart.sum}]]</strong></td>
-            <td th:text="${cart.sum}"></td>
-            <p><strong>Free Shipping on Orders Over $50, $7.99 Standard Shipping on Orders Under $50</strong></p>
-            <td th:text="${cart.total}"></td>
-            <form th:action="@{/creditform}" th:object="${cart}" method="post">
-                <br>
-                <button type="submit" value="Submit" class="btn btn-lg btn-outline-light"><strong>Checkout</strong></button>
-                <br>
-            </form>
+    <h1>Confirm Items in Cart</h1>
+    <div style="float: right">
+        <a th:href="@{/creditform}"><button type="button" class="btn btn-small btn-primary" >Checkout</button></a>
+    </div>
 
-        </tr>
-        </tbody>
-    </table>
+    <form th:action="@{/creditform}" th:object="${cart}" method="post">
+        <br>
+        <button type="submit" value="Submit" class="btn btn-lg btn-outline-light"><strong>Checkout</strong></button>
+        <br>
+    </form>
+
+
+    <div th:object="${cart1}">
+        <!--<h1 th:inline="text">Order ID: [[${cart1.id}]]</h1>-->
+        <table class="table table-dark table-hover table-striped">
+            <thead>
+            <tr style="font-family: 'Spectral SC', serif;">
+                <td></td>
+                <td>Product</td>
+                <td>Description</td>
+                <td>Product Price</td>
+                <td>Cart Price</td>
+                <td>Total Price w/Shipping</td>
+            </tr>
+            </thead>
+
+            <tbody>
+            <tr th:each="product : ${cart1.productsInCart}">
+                <td><img th:src="${product.image}" class="img-thumbnail"></td>
+                <td th:inline="text"><strong>[[${product.name}]]</strong></td>
+                <td th:text="${product.description}"></td>
+                <td th:text="${product.price}"></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td th:inline="text"><strong>Cart Total<br>[[${cart1.sum}]]</strong></td>
+                <td><strong>Free Shipping on Orders Over $50, $7.99 Standard Shipping on Orders Under $50</strong></td>
+                <td th:inline="text"><strong>Total w/Shipping<br>[[${cart1.total}]]</strong></td>
+            </tr>
+            </tbody>
+        </table>
+
+    </div>
+
 </div>
-
-<!--
-SHIPPING:
-if(total < 50){
-    total += 7.99
-} else {
-    total = total
-}
-
--->
 
 
 </body>
