--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,8 @@
 <br>
 <br>
 
-<div class="container">
+<!--Video-->
+<div class="container" >
     <div style="padding:56.25% 0 0 0;position:relative;">
         <iframe src="https://player.vimeo.com/video/66113049?autoplay=1&loop=1&title=0&byline=0&portrait=0"
                 style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
@@ -34,7 +35,7 @@
 
 
 <!--Card Deck of All Products-->
-<div class="container bg-faded text-white">
+<div class="container text-white">
 
     <div class="row">
         <hr class="mt-2 mb-5">
@@ -44,20 +45,21 @@
             <div class="card-deck">
             <div th:each="product : ${products}" class="col-lg-3 col-md-4 col-6">
 
-                <div class="card" style="width: 18rem; height: 100%; color: black">
-                    <img class="card-img-top" th:src="${product.image}" alt="">
+                <div class="card" style="width: 18rem; height: 100%; color: #2c1910; background: #d8cfb5">
+<!--                <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">-->
+                    <img class="card-img-top" th:src="${product.image}" alt="" style="height: 200px; object-fit: contain">
                     <div class="card-img-top">
                         <!--<p th:inline="text"><strong>[[${product.name}]]</strong></p>-->
                     </div>
-                    <div class="card-body" style="color: black">
+                    <div class="card-body">
                         <p th:inline="text"><strong>[[${product.name}]]</strong></p>
                         <p th:inline="text" style="font-style: italic">[[${product.category.name}]]</p>
                         <hr class="text-muted">
-                        <p th:inline="text"><strong style="color: brown">[[${product.price}]]</strong></p>
+                        <p th:inline="text"><strong style="color: red">[[${product.price}]]</strong></p>
                         <p th:inline="text">[[${product.description}]]</p>
                     </div>
                     <div class="card-footer">
-                        <a th:href="@{/detail/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-primary stretched-link" >Details</button></a>
+                        <a th:href="@{/detail/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-primary" >Details</button></a>
                         <a th:href="@{/addToCart/{id}(id=${product.id})}"><button type="button" class="btn btn-sm btn-success" >Add to Cart</button></a>
                         <br><br>
                         <div th:if="${product.user.getId()} == ${product_user_id}">
