--- a/src/main/resources/templates/secure.html
+++ b/src/main/resources/templates/secure.html
@@ -18,14 +18,14 @@
 <br>
 <br>
 
-<div class="container bg-faded text-white" style="">
+<div class="container text-white" style="">
 
     <h1 class="display-4" style="text-align: center"><strong>MY ACCOUNT</strong> </h1>
     <hr class="mt-2 mb-2">
 
     <div style="float: right">
-        <a th:href="@{/orderHistory}"><button type="button" class="btn btn-small btn-primary"> Past Orders </button></a>
-        <a href="/logout"> <button type="button" class="btn btn btn-primary" > Log Out </button></a>
+        <a th:href="@{/orderHistory}"><button type="button" class="btn btn-small btn-warning"> Past Orders </button></a>
+        <a href="/logout"> <button type="button" class="btn btn btn-danger" > Log Out </button></a>
     </div>
 
     <div class="row">
