--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -23,7 +23,7 @@
     <h1 class="mt-4 mb-3">Showroom <small style="color: white" th:inline="text">Vehicle</small></h1>
 </div>
 
-<div class="container bg-faded text-white">
+<div class="container text-white">
 
     <!-- Project One -->
 <!--    <div th:each="product : ${category.products}">-->
