--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -25,7 +25,7 @@ body {
 
 
 .colors{
-    http://mrcoffee.just-themes.com/
+    /*http://mrcoffee.just-themes.com/*/
 
     color: #b89d64;
     color: #513826;
