--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -69,7 +69,7 @@
 <!-- Category Menu Bar -->
 <div class="navigation" th:fragment="categorybar">
 
-    <nav class="navbar navbar-expand-lg navbar-dark <!--fixed-top-->" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark <!--fixed-top-->" id="categoryNav">
         <div class="container"> <!--style="font-family: 'Spectral SC', serif;"-->
 <!--            <a class="navbar-brand" href="/" style="font-family: 'Julius Sans One', sans-serif;"><img src="https://res.cloudinary.com/dwsdggfi5/image/upload/c_scale,h_40/v1583438126/Images/Avatar/appa_logo_j9dof2.png" style="opacity: 1"> Hotline Coffee </a>-->
 <!--            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">-->
