--- a/src/main/resources/templates/secure.html
+++ b/src/main/resources/templates/secure.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -26,6 +26,13 @@
     <div style="float: right">
         <a th:href="@{/orderHistory}"><button type="button" class="btn btn-small btn-warning"> Past Orders </button></a>
         <a href="/logout"> <button type="button" class="btn btn btn-danger" > Log Out </button></a>
+
+        <div sec:authorize="hasAuthority('ADMIN')">
+        <a th:href="@{/addCategory}"> <button type="button" class="btn btn btn-danger" > Add Category </button></a>
+        <a th:href="@{/addProduct}"> <button type="button" class="btn btn btn-danger" > Add Product </button></a>
+        </div>
+
+
     </div>
 
     <div class="row">
