--- a/src/main/resources/templates/creditform.html
+++ b/src/main/resources/templates/creditform.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}">
     <link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <style>
+    .blackback{
+        background-color: black;
+    }
     .row {
         display: -ms-flexbox; /* IE10 */
         display: flex;
@@ -104,9 +107,57 @@
 
 </style>
 </head>
-<body>
+<body class="blackback">
 <!--Navigation Bar-->
-<div th:replace="base :: navbar"></div>
+<div class="blackback" th:fragment="navbar">
+
+    <div class="container" style="text-align: center">
+        <img src="/images/logo/samazoncoffee_inverse.png" alt="Samazon Coffee Logo" style="width: 100%">
+    </div>
+
+    <nav class="navbar navbar-expand-lg navbar-dark <!--fixed-top-->" id="mainNav" >
+        <div class="container"><!-- style="font-family: 'Spectral SC', serif;">-->
+            <a class="navbar-brand" href="/"> <!--style="font-family: 'Julius Sans One', sans-serif;">--><img src="https://res.cloudinary.com/dwsdggfi5/image/upload/c_scale,h_40/v1583438126/Images/Avatar/appa_logo_j9dof2.png" style="opacity: 1"> Hotline Coffee </a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+
+                    <li class="nav-item">
+                        <form th:action="@{/search}" method="post">
+                            <input type="text" name="search" placeholder="Search for a product" required> <!--the "search" from RequestParam--><input type="submit" value="Enter">
+                        </form>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/"> Home </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/secure"> My Account </a>
+                    </li>
+
+                    <!--                    <li class="nav-item" th:if="${user_id} == null">-->
+                    <!--                        <a class="nav-link" href="/secure"> Login </a>-->
+                    <!--                    </li>-->
+
+                    <!--                    <li class="nav-item" th:if="${user_id} != null">-->
+                    <!--                        <a class="nav-link" href="/secure"> My Account </a>-->
+                    <!--                    </li>-->
+
+                    <li class="nav-item" th:if="${user_id} != null">
+                        <a class="nav-link" th:href="@{/cart/{user_id}(user_id=${user_id})}"> <button type="button" class="btn btn-primary">Cart</button> </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+</div>
+
 <div th:replace="base :: categorybar"></div>
 <br>
 <br>
