--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -7,7 +7,7 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/style.css">
     <style>
-        /** { border: 1px solid red !important; }*/
+        * { border: 1px solid red !important; }
     </style>
 
 </head>
@@ -28,7 +28,6 @@
 <div class="container text-white">
 
     <div class="row">
-        <hr class="mt-2 mb-5">
         <div class="row text-center text-lg-left">
 
             <!-- List of Products -->
