updated checkout finalConfirm and emptycart

--- a/src/main/resources/templates/finalConfirm.html
+++ b/src/main/resources/templates/finalConfirm.html
@@ -19,11 +19,13 @@
 <br>
 <br>
 
-<h1 th:align="center">Thank you for placing your order.
-    You will receive an email confirmation shortly.</h1>
+<h1 th:align="center">Thank you for placing your order.</h1>
+  <h2 th:align="center" > You will receive an email confirmation shortly.</h2>
+<br><br>
 
-
-<a th:align="center" href="/">Continue Shopping</a>
+<div th:align="center">
+    <a th:href="@{/}"><button type="button" class="btn btn-small btn-primary" >Continue Shopping</button></a>
+</div>
 
 
 
