--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -25,20 +25,17 @@
 <div class="container">
 
     <h1>Confirm Items in Cart</h1>
-    <div style="float: right">
-        <a th:href="@{/creditform}"><button type="button" class="btn btn-small btn-primary" >Checkout</button></a>
-    </div>
+
 
     <form th:action="@{/creditform}" th:object="${cart}" method="post">
-        <br>
-        <button type="submit" value="Submit" class="btn btn-lg btn-outline-light"><strong>Checkout</strong></button>
-        <br>
+
     </form>
 
 
     <div th:object="${cart1}">
-        <!--<h1 th:inline="text">Order ID: [[${cart1.id}]]</h1>-->
+
         <table class="table table-dark table-hover table-striped">
+            <p><strong>Free Shipping on Orders Over $50, $7.99 Standard Shipping on Orders Under $50</strong></p>
             <thead>
             <tr style="font-family: 'Spectral SC', serif;">
                 <td></td>
@@ -61,13 +58,16 @@
             <tr>
                 <td></td>
                 <td></td>
+                <td></td>
+                <td></td>
                 <td th:inline="text"><strong>Cart Total<br>[[${cart1.sum}]]</strong></td>
-                <td><strong>Free Shipping on Orders Over $50, $7.99 Standard Shipping on Orders Under $50</strong></td>
                 <td th:inline="text"><strong>Total w/Shipping<br>[[${cart1.total}]]</strong></td>
             </tr>
             </tbody>
         </table>
-
+        <div style="float: right">
+            <a th:href="@{/creditform}"><button type="button" class="btn btn-small btn-primary" >Checkout</button></a>
+        </div>
     </div>
 
 </div>
