--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -31,7 +31,7 @@
     <br>
 
     <div th:object="${cart1}">
-        <h1 th:inline="text">Order ID: [[${cart1.id}]]</h1>
+        <!--<h1 th:inline="text">Order ID: [[${cart1.id}]]</h1>-->
         <table class="table table-dark table-hover table-striped">
             <thead>
             <tr style="font-family: 'Spectral SC', serif;">
@@ -44,7 +44,7 @@
 
             <tbody>
             <tr th:each="product : ${cart1.productsInCart}">
-                <td><img th:src="${product.image}" class="img-thumbnail"></td>
+                <td><img th:src="${product.image}" class="img-thumbnail" style="height: 180px; object-fit: scale-down"></td>
                 <td th:inline="text"><strong>[[${product.name}]]</strong></td>
                 <td th:text="${product.description}"></td>
                 <td th:text="${product.price}"></td>
