--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -47,15 +47,17 @@
                 <td><img th:src="${product.image}" class="img-thumbnail" style="height: 180px; object-fit: scale-down"></td>
                 <td th:inline="text"><strong>[[${product.name}]]</strong></td>
                 <td th:text="${product.description}"></td>
-                <td th:text="${product.price}"></td>
+                <td th:inline="text">$ [[${#numbers.formatDecimal(product.price, 0, 'COMMA', 2, 'POINT')}]]</td>
             </tr>
 
             <tr>
                 <td></td>
                 <td></td>
-                <td th:inline="text"><strong>Cart Total<br>[[${cart1.sum}]]</strong></td>
+                <td th:inline="text"><strong>Cart Total<br>$ [[${#numbers.formatDecimal(cart1.sum, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
+                <!--<td th:inline="text"><strong>Cart Total<br>$[[${cart1.sum}]]</strong></td>-->
                 <p><strong>Free Shipping on Orders Over $50, $7.99 Standard Shipping on Orders Under $50</strong></p>
-                <td th:inline="text"><strong>Total w/Shipping<br>[[${cart1.total}]]</strong></td>
+                <td th:inline="text"><strong>Total w/Shipping<br>$ [[${#numbers.formatDecimal(cart1.total, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
+                <!--<td th:inline="text"><strong>Total w/Shipping<br>$[[${cart1.total}]]</strong></td>-->
             </tr>
             </tbody>
         </table>
