--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -52,7 +52,8 @@
                 <td><img th:src="${product.image}" class="img-thumbnail"></td>
                 <td th:inline="text"><strong>[[${product.name}]]</strong></td>
                 <td th:text="${product.description}"></td>
-                <td th:text="${product.price}"></td>
+                <td class="text-nowrap" th:inline="text"><strong>$ [[${#numbers.formatDecimal(product.price, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
+                <!--<td th:text="${product.price}"></td>-->
             </tr>
 
             <tr>
@@ -60,8 +61,10 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td th:inline="text"><strong>Cart Total<br>[[${cart1.sum}]]</strong></td>
-                <td th:inline="text"><strong>Total w/Shipping<br>[[${cart1.total}]]</strong></td>
+                <!--<td th:inline="text"><strong>Cart Total<br>[[${cart1.sum}]]</strong></td>-->
+                <td class="text-nowrap" th:inline="text"><strong>Cart Total<br>$ [[${#numbers.formatDecimal(cart1.sum, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
+                <!--<td th:inline="text"><strong>Total w/Shipping<br>[[${cart1.total}]]</strong></td>-->
+                <td class="text-nowrap" th:inline="text"><strong>Total w/Shipping<br>$ [[${#numbers.formatDecimal(cart1.total, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
             </tr>
             </tbody>
         </table>
