--- a/src/main/resources/templates/creditform.html
+++ b/src/main/resources/templates/creditform.html
@@ -232,7 +232,8 @@
           <i class="fa fa-shopping-cart"></i>
         </span>
             </h4>
-            <div th:each="cart : ${carts}">
+            <!--<div th:each="cart : ${carts}">-->
+            <div th:object="${cart1}">
                 <table class="table table-dark table-hover table-striped">
                     <thead>
                     <tr style="font-family: 'Spectral SC', serif;">
@@ -244,7 +245,7 @@
                     </thead>
 
                     <tbody>
-                    <tr th:each="product : ${cart.productsInCart}">
+                    <tr th:each="product : ${cart1.productsInCart}">
                         <td><img th:src="${product.image}" class="img-thumbnail"></td>
                         <td th:inline="text"><strong>[[${product.name}]]</strong></td>
                         <td th:text="${product.description}"></td>
@@ -255,10 +256,10 @@
                     <tr>
                         <td></td>
                         <td></td>
-                        <!--<td th:inline="text"><strong>Cart Total<br>[[${cart.sum}]]</strong></td>-->
+                        <!--<td th:inline="text"><strong>Cart Total<br>[[${cart1.sum}]]</strong></td>-->
                         <td class="text-nowrap" th:inline="text"><strong>Cart Total<br>$ [[${#numbers.formatDecimal(cart1.sum, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
                         <p><strong>Free Shipping on Orders Over $50, $7.99 Standard Shipping on Orders Under $50</strong></p>
-                        <!--<td th:inline="text"><strong>Total w/Shipping<br>[[${cart.total}]]</strong></td>-->
+                        <!--<td th:inline="text"><strong>Total w/Shipping<br>[[${cart1.total}]]</strong></td>-->
                         <td class="text-nowrap" th:inline="text"><strong>Total w/Shipping<br>$ [[${#numbers.formatDecimal(cart1.total, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
                     </tr>
                     </tbody>
