--- a/src/main/resources/templates/formProduct.html
+++ b/src/main/resources/templates/formProduct.html
@@ -32,7 +32,7 @@
                 <input type="hidden" th:value="${user_id}" name="product_user_id">
 
                 <div class="form-group">
-                    <input type="text" th:field="*{name}" class="form-control" placeholder="Enter Make and Model" required>
+                    <input type="text" th:field="*{name}" class="form-control" placeholder="Enter Product" required>
                     <span th:if="${#fields.hasErrors('name')}"
                           th:errors="*{name}"></span>
                 </div>
