--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -24,17 +24,19 @@
 <div class="container">
 
     <h1>Shopping Cart</h1>
+
     <div style="float: right">
         <a th:href="@{/checkout}"><button type="button" class="btn btn-small btn-primary" >Place Order</button></a>
         <!--<a th:href="@{/orderHistory}"><button type="button" class="btn btn-small btn-primary" >Past Orders</button></a>-->
     </div>
     <br>
+    <p><strong>Free Shipping on Orders Over $50, $7.99 Standard Shipping on Orders Under $50</strong></p>
 
     <div th:object="${cart1}">
         <!--<h1 th:inline="text">Order ID: [[${cart1.id}]]</h1>-->
         <table class="table table-dark table-hover table-striped">
             <thead>
-            <tr style="font-family: 'Spectral SC', serif;">
+            <tr>
                 <td></td>
                 <td>Product</td>
                 <td>Description</td>
@@ -53,12 +55,18 @@
             <tr>
                 <td></td>
                 <td></td>
-                <td th:inline="text"><strong>Cart Total<br>$ [[${#numbers.formatDecimal(cart1.sum, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
-                <!--<td th:inline="text"><strong>Cart Total<br>$[[${cart1.sum}]]</strong></td>-->
-                <p><strong>Free Shipping on Orders Over $50, $7.99 Standard Shipping on Orders Under $50</strong></p>
-                <td th:inline="text"><strong>Total w/Shipping<br>$ [[${#numbers.formatDecimal(cart1.total, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
-                <!--<td th:inline="text"><strong>Total w/Shipping<br>$[[${cart1.total}]]</strong></td>-->
+                <td style="float: right">Cart Total</td>
+                <td th:inline="text">$ [[${#numbers.formatDecimal(cart1.sum, 0, 'COMMA', 2, 'POINT')}]]</td>
             </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td style="float: right"><strong>Total w/ Shipping</strong></td>
+                <td th:inline="text"><strong>$ [[${#numbers.formatDecimal(cart1.total, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
+            </tr>
+
+
             </tbody>
         </table>
 
