--- a/src/main/resources/templates/creditform.html
+++ b/src/main/resources/templates/creditform.html
@@ -236,7 +236,7 @@
             <div th:object="${cart1}">
                 <table class="table table-dark table-hover table-striped">
                     <thead>
-                    <tr style="font-family: 'Spectral SC', serif;">
+                    <tr>
                         <td></td>
                         <td>Product</td>
                         <td>Description</td>
@@ -256,12 +256,17 @@
                     <tr>
                         <td></td>
                         <td></td>
-                        <!--<td th:inline="text"><strong>Cart Total<br>[[${cart1.sum}]]</strong></td>-->
-                        <td class="text-nowrap" th:inline="text"><strong>Cart Total<br>$ [[${#numbers.formatDecimal(cart1.sum, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
-                        <p><strong>Free Shipping on Orders Over $50, $7.99 Standard Shipping on Orders Under $50</strong></p>
-                        <!--<td th:inline="text"><strong>Total w/Shipping<br>[[${cart1.total}]]</strong></td>-->
-                        <td class="text-nowrap" th:inline="text"><strong>Total w/Shipping<br>$ [[${#numbers.formatDecimal(cart1.total, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
+                        <td style="float: right">Cart Total</td>
+                        <td th:inline="text">$ [[${#numbers.formatDecimal(cart1.sum, 0, 'COMMA', 2, 'POINT')}]]</td>
                     </tr>
+
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td style="float: right"><strong>Total w/ Shipping</strong></td>
+                        <td th:inline="text"><strong>$ [[${#numbers.formatDecimal(cart1.total, 0, 'COMMA', 2, 'POINT')}]]</strong></td>
+                    </tr>
+
                     </tbody>
                 </table>
             </div>
