--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 <!--Video-->
 <div class="container" >
     <div style="padding:56.25% 0 0 0;position:relative;">
-        <iframe src="https://player.vimeo.com/video/66113049?autoplay=1&loop=1&title=0&byline=0&portrait=0"
+        <iframe src="https://player.vimeo.com/video/66113049?autoplay=0&loop=1&title=0&byline=0&portrait=0"
                 style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
                 allow="autoplay; fullscreen" allowfullscreen id="iframeId"></iframe>
     </div>
@@ -43,10 +43,10 @@
 
             <!-- List of Products -->
             <div class="card-deck">
-            <div th:each="product : ${products}" class="col-lg-3 col-md-4 col-6">
+            <div th:each="product : ${products}" class="col-lg-3 col-md-4 col-6" style="margin-bottom: 20px">
 <!--            <div th:each="product : ${products}" class="col" style="width: 25%">-->
 
-                <div class="card" style="width: 18rem; height: 100%; color: black; /*background: #d8cfb5*/">
+                <div class="card" style="width: 18rem; height: 100%; color: black; margin-bottom: 20px; /*background: #d8cfb5*/">
 <!--                <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">-->
                     <img class="card-img-top" th:src="${product.image}" alt="" style="height: 200px; object-fit: contain">
                     <div class="card-img-top">
