--- a/src/main/resources/templates/searchlist.html
+++ b/src/main/resources/templates/searchlist.html
@@ -32,10 +32,10 @@
 
             <!-- List of Products -->
             <div class="card-deck">
-                <div th:each="product : ${productSearch}" class="col-lg-3 col-md-4 col-6">
+                <div th:each="product : ${productSearch}" class="col-lg-3 col-md-4 col-6" style="margin">
 
                     <div class="card" style="width: 18rem; height: 100%; color: black">
-                        <img class="card-img-top" th:src="${product.image}" alt="">
+                        <img class="card-img-top" th:src="${product.image}" alt="" style="height: 200px; object-fit: contain">
                         <div class="card-img-top">
                             <!--<p th:inline="text"><strong>[[${product.name}]]</strong></p>-->
                         </div>
